--- a/.github/workflows/ci-cd_nouveau.yml
+++ b/.github/workflows/ci-cd_nouveau.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Deploiement
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
