--- a/.github/workflows/ci-cd_nouveau.yml
+++ b/.github/workflows/ci-cd_nouveau.yml
@@ -1,4 +1,5 @@
-name: Deploiement
+
+name: CI/CD
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -7,34 +8,37 @@ on:
   push:
     branches:
       - master
-      - main
   pull_request:
     branches:
       - master
-      - main
-
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup Node
+
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 18.x
-      - name: Install Dependencies
+          node-version: "18.x"
+
+      - name: Install dependencies
         run: npm install
-      - name: Tests
+
+      - name: Run tests with code coverage
         uses: coactions/setup-xvfb@v1
         with:
           run: npm run test -- --no-watch --code-coverage
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        # run: vercel pull --yes --environment=production --token=gl3OSkl3tYpEVWgs7HERTlVh
+        
